<resources>
    <string name="app_name">My Tasks</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="task_desc">Description</string>
    <string name="task_cmt">Comment</string>
    <string name="task_remind">Reminder Date</string>
    <string name="task_remind_days">Remind me before</string>
    <string name="no_tasks">No Tasks!</string>
    <string name="task_name">Task Name</string>
    <string name="title_activity_add_task">Add New Task</string>
    <string name="save">Save</string>
    <string name="task_name_required">Task Name required</string>
    <string name="recurring">Recurring Task</string>
    <string-array name="noOfDays">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>

    </string-array>
    <string name="task_overdue">{0} is overdue by {1} day(s)</string>
    <string name="taskdate_required">Task Reminder Date required</string>
    <string name="task_inserted_successfully">Task created successfully!</string>
    <string name="task_due_message">Task {0} is due in {1} day(s)</string>
    <string name="title_activity_modify_task">Modify Task</string>
    <string name="task_updated_successfully">Task updated successfully</string>
    <string name="task_deleted_successfully">Task deleted successfully</string>
    <string name="pending_tasks_with_counter">{0} pending task(s)</string>
    <string name="pending_tasks">Pending Tasks</string>
    <string name="expired_warning_title">Task Expired</string>
    <string name="expired_message">Do you want to expire the task and create a new one for {0}?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="expired_date">Task expired. Please change date to future or remove recurrence.</string>
</resources>
