<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mytasks.ModifyTask">

    <LinearLayout
        android:id="@+id/holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/taskId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone" />

        <EditText
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name" />

        <EditText
            android:id="@+id/taskDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task_desc"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/taskCmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task_cmt"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/taskDate"
            style="?android:attr/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_remind" />

        <CheckBox
            android:id="@+id/recurringCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recurring" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remindCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_remind_days" />

            <Spinner
                android:id="@+id/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:src="@mipmap/ic_action_trash"
        app:layout_anchor="@id/holder"
        app:layout_anchorGravity="bottom|center"

        />
</android.support.design.widget.CoordinatorLayout>